--- a/pebble_version/Android_Pebble_SD_AS/app/src/main/res/xml/prefs.xml
+++ b/pebble_version/Android_Pebble_SD_AS/app/src/main/res/xml/prefs.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <CheckBoxPreference
+        android:key="LatchAlarms"
+        android:title="Latch Alarms"
+        android:summary="Require manual reset of alarms to reset them to silence them."
+        android:defaultValue="false" />
+
+    <CheckBoxPreference
         android:key="AudibleAlarm"
         android:title="Enable Audible Alarm"
         android:summary="Issue an audible alarm if the seizure detector enters an alarm condition."
